@@ -80,5 +80,8 @@ inist-tools (0.9.11RC) RC; urgency=medium
   * [DEV] Ajout de inist st|status + autocomplete correspondant
   * [DEV] Ajout de inist st|status + autocomplete correspondant -- màj
     aide
+  * [DEV] Correction d'un bug sur la gestion du proxy pour 'docker off'
+    + ajout des infos utilisateurs sur l'état d'activation/désactivation
+    du daemon docker
 
  -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200
